fixed bug in clickable links where clicking on whitespace will still navigate to link

--- a/cv-website/src/app/app.component.css
+++ b/cv-website/src/app/app.component.css
@@ -59,7 +59,6 @@ body {
 }
 
 .website-clickable-links h2 a {
-  display: block;
   align-items: center;
   text-align: center;
   padding: 10px;
